# Birdie

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-coolify.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/birdie/camera/: BirdieApiClient.kt  MainActivity.kt  MotionAnalyzer.kt  PendingUploadStore.kt  Roi.kt  RoiOverlayView.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml
deploy/: coolify.md
docs/: android-node.md  architecture.md  model-strategy.md  roadmap.md
scripts/: benchmark_classifier.py  post_sample_event.py
src/birdie/: __init__.py  classifier.py  config.py  database.py  decision.py  image_processing.py  main.py  repository.py  schemas.py  storage.py  telegram.py  telegram_commands.py
src/birdie/api/: __init__.py  routes.py
tests/: test_api.py  test_classifier.py  test_decision.py  test_image_processing.py  test_telegram.py
