[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdie"
version = "0.1.0"
description = "DIY bird feeder camera backend with media ingest, classification, and Telegram alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "pillow>=11.0,<13.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
classifier = [
    "birder>=0.5.3,<0.6",
]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
